--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Heasdphones</title>
+        <title>BEATS 3 MLK</title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
