Adicionando o video na estrutura do HTML

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <title>BEATS 3 MLK</title>
     </head>
     <body>
+        <video id="video-background" autoplay muted loop>
+            <source src="video.mp4" type="video/mp4">
+        </video>
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
             <nav class="nav container">
