--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
 
             <p class="footer__copy">
-                <a href="https://www.youtube.com/c/Bedimcode/" target="_blank" class="footer__copy-link">&#169; Albert William 2°DS 2023</a>
+                <a href="linktr.ee/emo19" target="_blank" class="footer__copy-link">&#169; Albert William 2°DS 2023</a>
             </p>
         </footer>
 
