--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <li class="nav__item">
                             <a href="#products" class="nav__link">Produtos</a>
                         </li>
+                        <li class="nav__item">
+                            <a href="https://headsets-do-emo.000webhostapp.com/site.html" class="nav__link">Admin</a>
+                        </li>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
