--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <h3 class="products__title">Black</h3>
                             <span class="products__price">R$599</span>
     
-                            <button class="button button--flex products__button">
+                            <button class="button button--flex products__button" onclick="window.location.href='https://loja.infinitepay.io/albertw/jlh5551-beats-3---black';" aria-label="Comprar Beats 3 - Black">
                                 <i class="ri-shopping-bag-line button__icon"></i>
                             </button>
                         </div>
