--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p class="home__description">Desfrute do som premiado da Beats com liberdade de audição sem fio e um design elegante e
                                 design aerodinâmico com fones de ouvido acolchoados confortáveis, proporcionando reprodução de primeira qualidade.
                             </p>
-                            <a href="#" class="button button--flex">
+                            <a href="#products" class="button button--flex">
                                 <span class="button--flex">
                                     <i class="ri-shopping-bag-line button__icon"></i></i> Comprar agora
                                 </span>
