Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="discount__animate">
                         <h2 class="discount__title">Mergulhe na <br> sua música</h2>
                         <p class="discount__description">Adquira agora, com até 50% de desconto.</p>
-                        <a href="#" class="button button--flex">
+                        <a href="#products" class="button button--flex">
                             <i class="ri-shopping-bag-line button__icon"></i> Compre Agora
                         </a>
                     </div>
